Facebook post pull now works on certain users

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -14,7 +14,7 @@
 
 <div id="s-main">
     <form>
-        Facebook UserID: <input type="text" name="facebook" id = "facebookUsername"><br>
+        Facebook Username: <input type="text" name="facebook" id = "facebookUsername"><br>
         Instagram Username: <input type="text" name="instagram" id = "instagramUsername"><br>
         Spotify: <input type="text" name="spotify" id = "spotifyUsername"><br>
         <input type="submit" value="Submit" onclick="return startAnalysis()">
